[metadata]
name = oahu
version = 0.1
author = Dark Secret Software Inc.
author-email = admin@darksecretsoftware.com
summary = Temporary pipeline for StackTach.v3
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 3 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Topic :: Software Development :: Libraries :: Python Modules
home-page = https://github.com/StackTach/oahu
keywords =
    stacktach
    pipeline
    events
    notification
    openstack
[files]
packages =
    oahu
[entry_points]
console_scripts =
    pipeline = oahu.client:main
